--- a/template.yaml
+++ b/template.yaml
@@ -676,7 +676,7 @@ Resources:
     Type: AWS::AppSync::GraphQLSchema
     Properties:
       ApiId: !GetAtt AppSyncGqlApi.ApiId
-      Definition: schema.graphql
+      DefinitionS3Location: schema.graphql
 
 
   # For CloudWatch Alarms
