--- a/template.yaml
+++ b/template.yaml
@@ -725,7 +725,7 @@ Resources:
             "version" : "2017-02-28",
             "operation" : "GetItem",
             "key" : {
-                "pk" : $util.dynamodb.toDynamoDBJson($ctx.args.id)
+                "pk" : $util.dynamodb.toDynamoDBJson($ctx.args.id),
                 "sk": "file#v0"
             }
         }
