additional photo queries

--- a/template.yaml
+++ b/template.yaml
@@ -735,28 +735,29 @@ Resources:
         $util.qr($ctx.result.remove("sk"))
         $utils.toJson($ctx.result)
 
-  QueryPhotoExifDataResolver:
-    Type: AWS::AppSync::Resolver
-    DependsOn: AppSyncGqlSchema
-    Properties:
-      ApiId: !GetAtt AppSyncGqlApi.ApiId
-      TypeName: Query
-      FieldName: photoExifData
-      DataSourceName: !GetAtt AppSyncDdbDataSource.Name
-      RequestMappingTemplate: |
-        {
-            "version" : "2017-02-28",
-            "operation" : "GetItem",
-            "key" : {
-                "pk" : $util.dynamodb.toDynamoDBJson($ctx.args.id),
-                "sk": $util.dynamodb.toDynamoDBJson("exif#v0")
-            }
-        }
-      ResponseMappingTemplate: |
-        $util.qr($ctx.result.put("id", "$ctx.result.pk"))
-        $util.qr($ctx.result.remove("pk"))
-        $util.qr($ctx.result.remove("sk"))
-        $utils.toJson($ctx.result)
+  # FIXME: Not sure how we'll model this schema well with graphql
+  #QueryPhotoExifDataResolver:
+  #  Type: AWS::AppSync::Resolver
+  #  DependsOn: AppSyncGqlSchema
+  #  Properties:
+  #    ApiId: !GetAtt AppSyncGqlApi.ApiId
+  #    TypeName: Query
+  #    FieldName: photoExifData
+  #    DataSourceName: !GetAtt AppSyncDdbDataSource.Name
+  #    RequestMappingTemplate: |
+  #      {
+  #          "version" : "2017-02-28",
+  #          "operation" : "GetItem",
+  #          "key" : {
+  #              "pk" : $util.dynamodb.toDynamoDBJson($ctx.args.id),
+  #              "sk": $util.dynamodb.toDynamoDBJson("exif#v0")
+  #          }
+  #      }
+  #    ResponseMappingTemplate: |
+  #      $util.qr($ctx.result.put("id", "$ctx.result.pk"))
+  #      $util.qr($ctx.result.remove("pk"))
+  #      $util.qr($ctx.result.remove("sk"))
+  #      $utils.toJson($ctx.result)
 
   QueryPhotoFileDataResolver:
     Type: AWS::AppSync::Resolver
@@ -773,8 +774,7 @@ Resources:
             "key" : {
                 "pk" : $util.dynamodb.toDynamoDBJson($ctx.args.id),
                 "sk": $util.dynamodb.toDynamoDBJson("file#v0")
-            },
-            attributeValues:
+            }
         }
       ResponseMappingTemplate: |
         $util.qr($ctx.result.put("id", "$ctx.result.pk"))
